# Rust-Winget

./: Cargo.toml  README-EN.md  README.md  build.rs
.cargo/: config.toml
.codellm/rules/: CODE_GUIDELINES.mdc
src/: main.rs
